Fix photo alignment on mobile.

--- a/src/assets/css/style.css.scss
+++ b/src/assets/css/style.css.scss
@@ -261,6 +261,10 @@ header {
     padding: $default-margin / 2;
   }
 
+  #photo {
+    text-align: left;
+  }
+
   #objective-contacts-wrap {
     display: block;
 
